2008-11-17  Michal Ludvig  <michal@logix.cz>

	* S3/Progress.py: Two progress meter implementations.
	* S3/Config.py, s3cmd: New --progress / --no-progress parameters
	  and Config() members.
	* S3/S3.py: Call Progress() in send_file()/recv_file()
	* NEWS: Let everyone know ;-)

2008-11-16  Michal Ludvig  <michal@logix.cz>

	* NEWS: Fetch 0.9.8.4 release news from 0.9.8.x branch.

2008-11-16  Michal Ludvig  <michal@logix.cz>

	Merge from 0.9.8.x branch, rel 251:
	* S3/S3.py: Adjusting previous commit (orig 249) - it's not a good idea 
	  to retry ALL failures. Especially not those code=4xx where AmazonS3 
	  servers are not happy with our requests.
	Merge from 0.9.8.x branch, rel 249:
	* S3/S3.py, S3/Exception.py: Re-issue failed requests in S3.send_request()
	Merge from 0.9.8.x branch, rel 248:
	* s3cmd: Don't leak open filehandles in sync. Thx Patrick Linskey for report.
	Merge from 0.9.8.x branch, rel 247:
	* s3cmd: Re-raise the right exception.
	Merge from 0.9.8.x branch, rel 246:
	* s3cmd, S3/S3.py, S3/Exceptions.py: Don't abort 'sync' or 'put' on files
	  that can't be open (e.g. Permision denied). Print a warning and skip over
	  instead.
	Merge from 0.9.8.x branch, rel 245:
	* S3/S3.py: Escape parameters in strings. Fixes sync to and 
	  ls of directories with spaces. (Thx Lubomir Rintel from Fedora Project)
	Merge from 0.9.8.x branch, rel 244:
	* s3cmd: Unicode brainfuck again. This time force all output
	  in UTF-8, will see how many complaints we'll get...

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* NEWS: s3cmd 0.9.8.4 released from branches/0.9.8.x SVN branch.

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Don't run into ZeroDivisionError when speed counter
	  returns 0s elapsed on upload/download file.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Utils.py, S3/S3Uri.py, S3/Exceptions.py:
	  Yet anoter Unicode round. Unicodised all command line arguments 
	  before processing.
